fix cors-headers problem

--- a/causes-1.html
+++ b/causes-1.html
@@ -412,10 +412,9 @@
 </div>
 <!--End pagewrapper-->
 
-
-
 <!-- JS -->
 <script src="custom_js/header_footer.js"></script>
+<script src="custom_js/campaign.js"></script>
 <script src="js/jquery.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
