view all campaign

--- a/causes-1.html
+++ b/causes-1.html
@@ -40,9 +40,9 @@
     <section class="page-title" style="background-image:url(images/background/bg-13.jpg)">
         <div class="auto-container">
             <div class="content-box">
-                <h1>Causes Style 01</h1>
+                <h1>Causes</h1>
                 <ul class="bread-crumb">
-                    <li><a class="home" href="index-2.html"><span class="fa fa-home"></span></a></li>
+                    <li><a class="home" href="index.html"><span class="fa fa-home"></span></a></li>
                     <li>Causes</li>
                 </ul>
             </div>
@@ -53,163 +53,9 @@
     <section class="causes-section-four">
         <div class="auto-container">
             <div class="cause-wrapper">
-                <div class="row">
+                <div class="row" id="cause-cards">
                     <!-- Cause Block Four -->
-                    <div class="cause-block-four style-two col-lg-4 col-md-6">
-                        <div class="inner-box">
-                            <div class="image">                                
-                                <img src="images/resource/cause-8.jpg" alt="">
-                                <div class="overlay"><a href="#" class="donate-box-btn">Donate Now</a></div>
-                            </div>
-                            <div class="lower-content">
-                                <div class="wrapper-box">
-                                    <h4><a href="cause-details.html">Help nigerian girls education</a></h4>
-                                    <div class="text">Indignation and dislike men who are like all <br>beguiled and demoralized.</div>
-                                    <div class="info-box">
-                                        <div class="raised">
-                                            <a href="#"><span>Raised:</span> $72000</a>
-                                        </div>
-                                        <div class="count-box">
-                                            <span class="count-text" data-speed="3000" data-stop="60">0</span><span class="affix">%</span>
-                                        </div>
-                                        <div class="goal">
-                                            <a href="#"><span>Goal:</span>  $100000</a>
-                                        </div>                                        
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Cause Block Four -->
-                    <div class="cause-block-four style-two col-lg-4 col-md-6">
-                        <div class="inner-box">
-                            <div class="image">                                
-                                <img src="images/resource/cause-9.jpg" alt="">
-                                <div class="overlay"><a href="#" class="donate-box-btn">Donate Now</a></div>
-                            </div>
-                            <div class="lower-content">
-                                <div class="wrapper-box">
-                                    <h4><a href="cause-details.html">Help bolanile fight cancer</a></h4>
-                                    <div class="text">Our power of choice is untrammelled and <br>nothing prevents like best.</div>
-                                    <div class="info-box">
-                                        <div class="raised">
-                                            <a href="#"><span>Raised:</span> $74800</a>
-                                        </div>
-                                        <div class="count-box">
-                                            <span class="count-text" data-speed="3000" data-stop="68">0</span><span class="affix">%</span>
-                                        </div>
-                                        <div class="goal">
-                                            <a href="#"><span>Goal:</span> $110000</a>
-                                        </div>                                        
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Cause Block Four -->
-                    <div class="cause-block-four style-two col-lg-4 col-md-6">
-                        <div class="inner-box">
-                            <div class="image">                                
-                                <img src="images/resource/cause-10.jpg" alt="">
-                                <div class="overlay"><a href="#" class="donate-box-btn">Donate Now</a></div>
-                            </div>
-                            <div class="lower-content">
-                                <div class="wrapper-box">
-                                    <h4><a href="cause-details.html">Donation for helpless people</a></h4>
-                                    <div class="text">Obligations of business it will frequently <br>have to be repudiated.</div>
-                                    <div class="info-box">
-                                        <div class="raised">
-                                            <a href="#"><span>Raised:</span> $98400</a>
-                                        </div>
-                                        <div class="count-box">
-                                            <span class="count-text" data-speed="3000" data-stop="82">0</span><span class="affix">%</span>
-                                        </div>
-                                        <div class="goal">
-                                            <a href="#"><span>Goal:</span> $120000</a>
-                                        </div>                                        
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Cause Block Four -->
-                    <div class="cause-block-four style-two col-lg-4 col-md-6">
-                        <div class="inner-box">
-                            <div class="image">                                
-                                <img src="images/resource/cause-11.jpg" alt="">
-                                <div class="overlay"><a href="#" class="donate-box-btn">Donate Now</a></div>
-                            </div>
-                            <div class="lower-content">
-                                <div class="wrapper-box">
-                                    <h4><a href="cause-details.html">Help bolanile fight cancer</a></h4>
-                                    <div class="text">Our power of choice is untrammelled and <br>nothing prevents like best.</div>
-                                    <div class="info-box">
-                                        <div class="raised">
-                                            <a href="#"><span>Raised:</span> $74800</a>
-                                        </div>
-                                        <div class="count-box">
-                                            <span class="count-text" data-speed="3000" data-stop="68">0</span><span class="affix">%</span>
-                                        </div>
-                                        <div class="goal">
-                                            <a href="#"><span>Goal:</span> $110000</a>
-                                        </div>                                        
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Cause Block Four -->
-                    <div class="cause-block-four style-two col-lg-4 col-md-6">
-                        <div class="inner-box">
-                            <div class="image">                                
-                                <img src="images/resource/cause-12.jpg" alt="">
-                                <div class="overlay"><a href="#" class="donate-box-btn">Donate Now</a></div>
-                            </div>
-                            <div class="lower-content">
-                                <div class="wrapper-box">
-                                    <h4><a href="cause-details.html">Donation for helpless people</a></h4>
-                                    <div class="text">Obligations of business it will frequently <br> have to be repudiated.</div>
-                                    <div class="info-box">
-                                        <div class="raised">
-                                            <a href="#"><span>Raised:</span> $98400</a>
-                                        </div>
-                                        <div class="count-box">
-                                            <span class="count-text" data-speed="3000" data-stop="82">0</span><span class="affix">%</span>
-                                        </div>
-                                        <div class="goal">
-                                            <a href="#"><span>Goal:</span> $120000</a>
-                                        </div>                                        
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Cause Block Four -->
-                    <div class="cause-block-four style-two col-lg-4 col-md-6">
-                        <div class="inner-box">
-                            <div class="image">                                
-                                <img src="images/resource/cause-13.jpg" alt="">
-                                <div class="overlay"><a href="#" class="donate-box-btn">Donate Now</a></div>
-                            </div>
-                            <div class="lower-content">
-                                <div class="wrapper-box">
-                                    <h4><a href="cause-details.html">Help nigerian girls education</a></h4>
-                                    <div class="text">Indignation and dislike men who are like all <br>beguiled and demoralized.</div>
-                                    <div class="info-box">
-                                        <div class="raised">
-                                            <a href="#"><span>Raised:</span> $72000</a>
-                                        </div>
-                                        <div class="count-box">
-                                            <span class="count-text" data-speed="3000" data-stop="60">0</span><span class="affix">%</span>
-                                        </div>
-                                        <div class="goal">
-                                            <a href="#"><span>Goal:</span> $100000</a>
-                                        </div>                                        
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>                
             </div>
         </div>
