Work whih blog, campaign, event

--- a/causes.html
+++ b/causes.html
@@ -48,19 +48,16 @@
             </div>
         </div>
     </section>
-
     <!-- Causes Section Four -->
     <section class="causes-section-four">
         <div class="auto-container">
             <div class="cause-wrapper">
                 <div class="row" id="cause-cards">
                     <!-- Cause Block Four -->
-                    
                 </div>                
             </div>
         </div>
     </section>
-
     <!-- Donor Section -->
     <section class="donor-section style-two">
         <div class="auto-container">
@@ -162,10 +159,8 @@
             </div>
         </div>
     </section>
-
     <!-- Main Footer -->
     <div id="footer"></div>
-
     <!--Scroll to top-->
     <div class="scroll-to-top scroll-to-target" data-target="html"><span class="icon flaticon-arrow"></span></div>
 
@@ -257,6 +252,13 @@
 
 </div>
 <!--End pagewrapper-->
+<style>
+    img.event-image {
+        height: 175px;
+        width: 175px;
+    }
+</style>
+
 
 <!-- JS -->
 <script src="custom_js/header_footer.js"></script>
