--- a/blog.html
+++ b/blog.html
@@ -43,7 +43,7 @@
             <div class="content-box">
                 <h1>Blog Grid View</h1>
                 <ul class="bread-crumb">
-                    <li><a class="home" href="index-2.html"><span class="fa fa-home"></span></a></li>
+                    <li><a class="home" href="index.html"><span class="fa fa-home"></span></a></li>
                     <li>News Room</li>
                 </ul>
             </div>
@@ -53,182 +53,10 @@
     <!-- Blog Section -->
     <section class="blog-section">
         <div class="auto-container">
-            <div class="row">
+            <div class="row" id="all-blog-grid">
                 <!-- News Block Two -->
-                <div class="col-lg-4 col-md-6 news-block-two style-three">
-                    <div class="inner-box wow fadeInUp" data-wow-delay="200ms">
-                        <div class="image">
-                            <div class="category"><a href="#">Tips & Advice</a></div>
-                            <a href="blog-details.html"><img src="images/resource/news-5.jpg" alt=""></a>
-                            <div class="post-meta-info">
-                                <a href="#"><span class="flaticon-eye"></span>21</a>
-                                <a href="#"><span class="flaticon-comment"></span>08</a>
-                            </div>
-                        </div>
-                        <div class="lower-content">
-                            <div class="date"><span class="flaticon-clock"></span>Jul 14, 2019</div>
-                            <h4><a href="blog-details.html">Water is more essential</a></h4>
-                            <div class="author-info">
-                                <div class="image"><img src="images/resource/author-thumb-1.jpg" alt=""></div>
-                                <div class="author-title"><a href="#">Rubin Santro</a></div>
-                                <div class="share-icon style-two post-share-icon">
-                                    <div class="share-btn"><img src="images/resource/dotted.png" alt=""></div>
-                                    <ul>
-                                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                        <li><a href="#"><span class="fa fa-skype"></span></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- News Block Two -->
-                <div class="col-lg-4 col-md-6 news-block-two style-three">
-                    <div class="inner-box wow fadeInDown" data-wow-delay="400ms">
-                        <div class="image">
-                            <div class="category"><a href="#">Interviews</a></div>
-                            <a href="blog-details.html"><img src="images/resource/news-6.jpg" alt=""></a>
-                            <div class="post-meta-info">
-                                <a href="#"><span class="flaticon-eye"></span>14</a>
-                                <a href="#"><span class="flaticon-comment"></span>05</a>
-                            </div>
-                        </div>
-                        <div class="lower-content">
-                            <div class="date"><span class="flaticon-clock"></span>Jun 05, 2019</div>
-                            <h4><a href="blog-details.html">Coaching for fundraisers</a></h4>
-                            <div class="author-info">
-                                <div class="image"><img src="images/resource/author-thumb-2.jpg" alt=""></div>
-                                <div class="author-title"><a href="#">Carl Ronny</a></div>
-                                <div class="share-icon style-two post-share-icon">
-                                    <div class="share-btn"><img src="images/resource/dotted.png" alt=""></div>
-                                    <ul>
-                                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                        <li><a href="#"><span class="fa fa-skype"></span></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- News Block Two -->
-                <div class="col-lg-4 col-md-6 news-block-two style-three">
-                    <div class="inner-box wow fadeInUp" data-wow-delay="200ms">
-                        <div class="image">
-                            <div class="category"><a href="#">Disaster</a><a href="#">Video</a></div>
-                            <a href="blog-details.html"><img src="images/resource/news-7.jpg" alt=""></a>
-                            <div class="post-meta-info">
-                                <a href="#"><span class="flaticon-eye"></span>12</a>
-                                <a href="#"><span class="flaticon-comment"></span>02</a>
-                            </div>
-                            <div class="youtube-video-box"><a href="#"><span class="flaticon-logo"></span></a></div>
-                        </div>
-                        <div class="lower-content">
-                            <div class="date"><span class="flaticon-clock"></span>Mar 27, 2019</div>
-                            <h4><a href="blog-details.html">Aid for japan flood</a></h4>
-                            <div class="author-info">
-                                <div class="image"><img src="images/resource/author-thumb-3.jpg" alt=""></div>
-                                <div class="author-title"><a href="#">Gene Emery</a></div>
-                                <div class="share-icon style-two post-share-icon">
-                                    <div class="share-btn"><img src="images/resource/dotted.png" alt=""></div>
-                                    <ul>
-                                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                        <li><a href="#"><span class="fa fa-skype"></span></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- News Block Two -->
-                <div class="col-lg-4 col-md-6 news-block-two style-three">
-                    <div class="inner-box wow fadeInDown" data-wow-delay="400ms">
-                        <div class="image">
-                            <div class="category"><a href="#">Interviews</a></div>
-                            <a href="blog-details.html"><img src="images/resource/news-8.jpg" alt=""></a>
-                            <div class="post-meta-info">
-                                <a href="#"><span class="flaticon-eye"></span>14</a>
-                                <a href="#"><span class="flaticon-comment"></span>05</a>
-                            </div>
-                        </div>
-                        <div class="lower-content">
-                            <div class="date"><span class="flaticon-clock"></span>Jun 05, 2019</div>
-                            <h4><a href="blog-details.html">Coaching for fundraisers</a></h4>
-                            <div class="author-info">
-                                <div class="image"><img src="images/resource/author-thumb-4.jpg" alt=""></div>
-                                <div class="author-title"><a href="#">Carl Ronny</a></div>
-                                <div class="share-icon style-two post-share-icon">
-                                    <div class="share-btn"><img src="images/resource/dotted.png" alt=""></div>
-                                    <ul>
-                                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                        <li><a href="#"><span class="fa fa-skype"></span></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- News Block Two -->
-                <div class="col-lg-4 col-md-6 news-block-two style-three">
-                    <div class="inner-box wow fadeInUp" data-wow-delay="200ms">
-                        <div class="image">
-                            <div class="category"><a href="#">Disaster</a><a href="#">Video</a></div>
-                            <a href="blog-details.html"><img src="images/resource/news-9.jpg" alt=""></a>
-                            <div class="post-meta-info">
-                                <a href="#"><span class="flaticon-eye"></span>12</a>
-                                <a href="#"><span class="flaticon-comment"></span>02</a>
-                            </div>
-                        </div>
-                        <div class="lower-content">
-                            <div class="date"><span class="flaticon-clock"></span>Mar 27, 2019</div>
-                            <h4><a href="blog-details.html">Aid for japan flood</a></h4>
-                            <div class="author-info">
-                                <div class="image"><img src="images/resource/author-thumb-1.jpg" alt=""></div>
-                                <div class="author-title"><a href="#">Gene Emery</a></div>
-                                <div class="share-icon style-two post-share-icon">
-                                    <div class="share-btn"><img src="images/resource/dotted.png" alt=""></div>
-                                    <ul>
-                                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                        <li><a href="#"><span class="fa fa-skype"></span></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- News Block Two -->
-                <div class="col-lg-4 col-md-6 news-block-two style-three">
-                    <div class="inner-box wow fadeInUp" data-wow-delay="200ms">
-                        <div class="image">
-                            <div class="category"><a href="#">Tips & Advice</a></div>
-                            <a href="blog-details.html"><img src="images/resource/news-10.jpg" alt=""></a>
-                            <div class="post-meta-info">
-                                <a href="#"><span class="flaticon-eye"></span>21</a>
-                                <a href="#"><span class="flaticon-comment"></span>08</a>
-                            </div>
-                        </div>
-                        <div class="lower-content">
-                            <div class="date"><span class="flaticon-clock"></span>Jul 14, 2019</div>
-                            <h4><a href="blog-details.html">Water is more essential</a></h4>
-                            <div class="author-info">
-                                <div class="image"><img src="images/resource/author-thumb-2.jpg" alt=""></div>
-                                <div class="author-title"><a href="#">Rubin Santro</a></div>
-                                <div class="share-icon style-two post-share-icon">
-                                    <div class="share-btn"><img src="images/resource/dotted.png" alt=""></div>
-                                    <ul>
-                                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                        <li><a href="#"><span class="fa fa-skype"></span></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
+                
             </div>
             <div class="posts-pagination mb-30 mt-20">
                 <ul>
@@ -331,11 +159,20 @@
 
 </div>
 <!--End pagewrapper-->
-
-
-
+<style>
+    .short-details {
+        display: -webkit-box; /* Enables flexbox-like behavior */
+        -webkit-box-orient: vertical; /* Specifies the box orientation */
+        overflow: hidden; /* Hides the overflow content */
+        text-overflow: ellipsis; /* Adds "..." at the end if the text is truncated */
+        -webkit-line-clamp: 2; /* Limits the text to 2 lines */
+        line-height: 1.5; /* Adjust line height as needed */
+        max-height: 3em; /* Ensures the height matches 2 lines of text */
+    }
+</style>
 <!-- JS -->
 <script src="custom_js/header_footer.js"></script>
+<script src="custom_js/blog.js"></script>
 <script src="js/jquery.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
