Add Blog Comments

--- a/blog-details.html
+++ b/blog-details.html
@@ -101,38 +101,12 @@
                                                 <h2>Read Comments</h2>
                                             </div>
                                             <!--Comment Box-->
-                                            <div class="comment-box">
-                                                <div class="comment">
-                                                    <div class="author-thumb"><img
-                                                            src="images/resource/author-thumb-6.jpg" alt=""></div>
-                                                    <div class="comment-inner">
-                                                        <div class="comment-info">Steven Rich<span class="date">February
-                                                                26, 2019</span></div>
-                                                        <div class="text">On the other hand, we denounce with righteous
-                                                            indignation and dislike men who are so beguiled and
-                                                            demoralized saying through shrinking.</div>
-                                                        <a class="reply-comment" href="#"><span
-                                                                class="flaticon-next"></span> Reply</a>
-                                                    </div>
+                                            <div id="post-comment">
+                                                <div class="comment-box">
+                                                  
                                                 </div>
                                             </div>
 
-                                            <!--Comment Box-->
-                                            <div class="comment-box">
-                                                <div class="comment">
-                                                    <div class="author-thumb"><img
-                                                            src="images/resource/author-thumb-7.jpg" alt=""></div>
-                                                    <div class="comment-inner">
-                                                        <div class="comment-info">William Cobus,<span
-                                                                class="date">February 25, 2019</span></div>
-                                                        <div class="text"> These cases are perfectly simple and easy to
-                                                            distinguish. In a free hour, when our power of choice is
-                                                            untrammelled nothing.</div>
-                                                        <a class="reply-comment" href="#"><span
-                                                                class="flaticon-next"></span> Reply</a>
-                                                    </div>
-                                                </div>
-                                            </div>
                                         </div>
                                         <!-- Comment form -->
                                         <div class="comment-form">
