--- a/event-details.html
+++ b/event-details.html
@@ -264,7 +264,7 @@
     <div class="participate-form">
         <div class="auto-container">
             <div class="default-form-area wow fadeInUp" data-wow-delay="200ms">
-                <form id="contact-form" name="contact_form" class="contact-form" action="http://steelthemes.com/demo/html/Goodsoul_html/inc/sendmail.php" method="post">
+                <form id="contact-form" name="contact_form" class="contact-form" action="" method="post">
                     <div class="row clearfix">
                         <div class="col-lg-3 col-md-6 column">        
                             <div class="form-group">
