--- a/login.html
+++ b/login.html
@@ -354,14 +354,12 @@
                                 <div class="col-md-12">
                                     <div class="row">
                                         <div class="col-lg-5 col-md-5 col-sm-12">
-                                            <button class="theme-btn btn-style-one" type="submit"><span>Register</span></button>
+                                            <button class="theme-btn btn-style-one" type="submit"><span>Login</span></button>
                                         </div>
-                                        <div class="col-lg-7 col-md-7 col-sm-12">
-                                            <div class="right">
-                                                <h6><span>*</span>You must be a free registered user to submit content. </h6>
-                                            </div>
-                                        </div>
-                                    </div>   
+                                        
+                                    </div>  
+                                    <p class="text-danger" id="error"></p>  
+ 
                                 </div> 
                             </form>    
                         </div>
