--- a/register.html
+++ b/register.html
@@ -392,8 +392,9 @@
                                 </div>
                                 <div class="col-md-12">
                                     <div class="row">
+                                        
                                         <div class="col-lg-5 col-md-5 col-sm-12">
-                                            <input type="submit" id="registration_button" class="form-control text-center style2-input text-white fw-600 bg-dark border-0 p-0 " value="Register">    
+                                            <button class="theme-btn btn-style-one" id="registration_button" type="submit"><span>Register</span></button>
                                         </div>
                                         
                                     </div> 
