--- a/cause-details.html
+++ b/cause-details.html
@@ -62,7 +62,8 @@
                 </div>
                 <div class="donars"><span id="number-of-donar">Donars</span> <br>148</div>
                 <div class="link-btn">
-                    <a href="#" class="theme-btn btn-style-one donate-box-btn"><span>Donate Now</span></a>
+                    <!-- <input type="text" id="donate_now_details" name="donate_now" id=""> -->
+                    <a href="#" class="theme-btn btn-style-one donate-box-btn" name="donate_now" id="donate_now_details" onclick="donateForCampaign(this.id)"><span>Donate Now</span></a>
                 </div>
             </div>
         </div>
@@ -189,6 +190,7 @@
 
 <!-- JS -->
 <script src="custom_js/campaign.js"></script>
+<script src="custom_js/app.js"></script>
 <script src="custom_js/header_footer.js"></script>
 <script src="js/jquery.js"></script>
 <script src="js/popper.min.js"></script>
