--- a/login.html
+++ b/login.html
@@ -100,7 +100,7 @@
                 <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12">
                     <div class="form register">
                         <div class="shop-page-title">
-                            <div class="title">Login</div>
+                            <div class="title" >Login</div>
                         </div>
                         <div class="row">
                             <form method="post" onsubmit="handleLogin(event)">
@@ -120,7 +120,7 @@
                                 <div class="col-md-12">
                                     <div class="row">
                                         <div class="col-lg-5 col-md-5 col-sm-12">
-                                            <button class="theme-btn btn-style-one" type="submit"><span>Login</span></button>
+                                            <button class="theme-btn btn-style-one" id="login-button" type="submit"><span>Login</span></button>
                                         </div>
                                         
                                     </div>  
