--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 <link href="css/animate.css" rel="stylesheet">
 <link href="css/custom-animate.css" rel="stylesheet">
 <link href="css/jquery.fancybox.min.css" rel="stylesheet">
+<link href="css/responsive.css" rel="stylesheet">
 <link href="css/owl.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
+
 
 <!-- Responsive -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -150,61 +151,9 @@
                         <h1>The trusted choice of donors</h1>
                         <div class="text">We connects nonprofits, donors, and companies in nearly every country around the world.</div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-4 donor-block">
-                            <div class="inner-box wow fadeInUp" data-wow-delay="200ms">
-                                <div class="top-content">
-                                    <div class="image">
-                                        <img src="images/resource/donor-1.jpg" alt="">
-                                        <div class="overlay">
-                                            <div class="icon"><a href="#"><span class="fa fa-twitter"></span></a></div>
-                                        </div>
-                                    </div>
-                                    <h4>Austin Leon</h4>
-                                    <div class="location">San Jose</div>
-                                </div>
-                                <div class="bottom-content">
-                                    <div class="text">Donation</div>
-                                    <div class="price">$250</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 donor-block">
-                            <div class="inner-box wow fadeInUp" data-wow-delay="500ms">
-                                <div class="top-content">
-                                    <div class="image">
-                                        <img src="images/resource/donor-2.jpg" alt="">
-                                        <div class="overlay">
-                                            <div class="icon"><a href="#"><span class="fa fa-twitter"></span></a></div>
-                                        </div>
-                                    </div>
-                                    <h4>Alvina Betty</h4>
-                                    <div class="location">Liverpool</div>
-                                </div>
-                                <div class="bottom-content">
-                                    <div class="text">Donation</div>
-                                    <div class="price">$200</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 donor-block">
-                            <div class="inner-box wow fadeInUp" data-wow-delay="200ms">
-                                <div class="top-content">
-                                    <div class="image">
-                                        <img src="images/resource/donor-3.jpg" alt="">
-                                        <div class="overlay">
-                                            <div class="icon"><a href="#"><span class="fa fa-twitter"></span></a></div>
-                                        </div>
-                                    </div>
-                                    <h4>Jasper Flelix</h4>
-                                    <div class="location">Newcastle</div>
-                                </div>
-                                <div class="bottom-content">
-                                    <div class="text">Donation</div>
-                                    <div class="price">$500</div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="row" id="donar-list">
+                       
+                        
                     </div>
                 </div>
                 <div class="col-lg-4 right-column">
@@ -701,12 +650,15 @@
         line-height: 1.5; /* Adjust line height as needed */
         max-height: 3em; /* Ensures the height matches 2 lines of text */
     }
+    .donar-image{
+        height: 100px;
+        width: 100px;
+    }
 </style>
 
 <!-- JS -->
-
-<script src="custom_js/app.js"></script>
 <script src="custom_js/header_footer.js"></script>
+<script src="custom_js/auth.js"></script>
 <script src="js/jquery.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -720,6 +672,8 @@
 <script src="js/jquery-ui.js"></script>
 <!-- Custom JS -->
 <script src="js/script.js"></script>
+<script src="custom_js/app.js"></script>
+
 </body>
 
 <!-- Goodsoul_html/  20 Nov 2019 03:26:36 GMT -->
