--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -137,23 +137,17 @@
                        alt="User profile picture">
                 </div>
 
-                <h3 class="profile-username text-center" id="user-name">Nina Mcintire</h3>
+                <h3 class="profile-username text-center" id="user-name"></h3>
 
-                <p class="text-muted text-center">Software Engineer</p>
+                <p class="text-muted text-center" id="user-phone"></p>
 
                 <ul class="list-group list-group-unbordered mb-3">
                   <li class="list-group-item">
-                    <b>Followers</b> <a class="float-right">1,322</a>
+                    <b>Total Donate Amount</b> <a class="float-right">৳ <span id="donate-amount"></span></a>
                   </li>
-                  <li class="list-group-item">
-                    <b>Following</b> <a class="float-right">543</a>
-                  </li>
-                  <li class="list-group-item">
-                    <b>Friends</b> <a class="float-right">13,287</a>
-                  </li>
+                  
                 </ul>
 
-                <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>
               </div>
               <!-- /.card-body -->
             </div>
@@ -210,15 +204,7 @@
                           <input type="text" class="form-control" id="inputSkills" placeholder="Skills">
                         </div>
                       </div>
-                      <div class="form-group row">
-                        <div class="offset-sm-2 col-sm-10">
-                          <div class="checkbox">
-                            <label>
-                              <input type="checkbox"> I agree to the <a href="#">terms and conditions</a>
-                            </label>
-                          </div>
-                        </div>
-                      </div>
+                      
                       <div class="form-group row">
                         <div class="offset-sm-2 col-sm-10">
                           <button type="submit" class="btn btn-danger">Submit</button>
