--- a/cause-details.html
+++ b/cause-details.html
@@ -189,9 +189,28 @@
 </style>
 
 <!-- JS -->
+<!-- 
+<script src="js/jquery.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/TweenMax.min.js"></script>
+<script src="js/wow.js"></script>
+<script src="js/owl.js"></script>
+<script src="js/appear.js"></script>
+<script src="js/swiper.min.js"></script>
+<script src="js/jquery.fancybox.js"></script>
+<script src="js/menu-nav-btn.js"></script>
+<script src="js/jquery-ui.js"></script>
+<script src="js/knob.js"></script> -->
+<!-- Custom JS -->
+<!-- <script src="js/script.js"></script> -->
+
+<!-- JS -->
+
 <script src="custom_js/campaign.js"></script>
-<script src="custom_js/app.js"></script>
 <script src="custom_js/header_footer.js"></script>
+<script src="custom_js/app.js"></script>
+
 <script src="js/jquery.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -206,6 +225,10 @@
 <script src="js/knob.js"></script>
 <!-- Custom JS -->
 <script src="js/script.js"></script>
+
+
+
+
 
 </body>
 
