--- a/index.html
+++ b/index.html
@@ -657,7 +657,8 @@
 </style>
 
 <!-- JS -->
-
+<script src="custom_js/header_footer.js"></script>
+<script src="custom_js/auth.js"></script>
 <script src="js/jquery.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -672,8 +673,10 @@
 <!-- Custom JS -->
 <script src="js/script.js"></script>
 <script src="custom_js/app.js"></script>
-<script src="custom_js/header_footer.js"></script>
-<script src="custom_js/auth.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+
 
 </body>
 
