--- a/Profile/donationHistory.html
+++ b/Profile/donationHistory.html
@@ -244,24 +244,14 @@
                 <table class="table table-bordered">
                   <thead>
                     <tr>
-                      <th style="width: 10px">#</th>
+                      <th style="width: 10px">Id</th>
                       <th>Campaign Name</th>
                       <th>Amount</th>
-                      <th style="width: 40px">Label</th>
                     </tr>
                   </thead>
-                  <tbody>
-                    <tr>
-                      <td>1.</td>
-                      <td>Campaign Name</td>
-                      <td>
-                        <div class="progress progress-xs">
-                          asdf
-                        </div>
-                      </td>
-                      <td><span class="badge bg-danger">Amount</span></td>
-                    </tr>
-                   
+
+                  <tbody id="donation-history">
+                    
                   </tbody>
                 </table>
               </div>
@@ -300,6 +290,7 @@
 <!-- ./wrapper -->
 
 <!-- jQuery -->
+<script src="../custom_js/auth.js"></script>
 <script src=" plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
 <script src=" plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
