--- a/Profile/donationHistory.html
+++ b/Profile/donationHistory.html
@@ -152,6 +152,7 @@
 
 <!-- jQuery -->
 <script src="../custom_js/auth.js"></script>
+<script src="../custom_js/header_footer.js"></script>
 <script src=" plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
 <script src=" plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
