--- a/footer.html
+++ b/footer.html
@@ -47,7 +47,7 @@
         <div class="footer-bottom">
             <div class="left-content">
                 <div class="icon"><img src="images/resource/logo-icon.png" alt=""></div>
-                <div class="copyright-text"><a href="templateshub.net">Templateshub</a><a href="#">Goodsoul.</a> <br>Designed By <a href="#">Themekalia.</a></div>
+                <div class="copyright-text"><a href="#"></a><a href="#">Heart for Humen.</a> <br>Designed By <a href="#">Sohel.</a></div>
             </div>
             <div class="right-content">
                 <ul class="social-icon-three">
