--- a/header.html
+++ b/header.html
@@ -306,7 +306,7 @@
                         </div>
                         <div class="col-md-12 col-sm-12 col-xs-12">
                             <div class="form-group d-flex align-items-center justify-content-between">
-                                <button class="theme-btn btn-style-one" onclick="donet(event,id)" type="submit"><span>Donate Now</span></button>
+                                <a href="" class="theme-btn btn-style-one"onclick="donet(event,id)"><span>Donate Now</span></a>
                                 <div class="checkbox">
                                     
                                 </div>
