work with payment

--- a/cause-details.html
+++ b/cause-details.html
@@ -61,9 +61,9 @@
                     </div>
                 </div>
                 <div class="donars"><span id="number-of-donar">Donars</span> <br>148</div>
-                <div class="link-btn">
+                <div class="link-btn" id="donate-button">
                     <!-- <input type="text" id="donate_now_details" name="donate_now" id=""> -->
-                    <a href="#" class="theme-btn btn-style-one donate-box-btn" name="donate_now" id="donate_now_details" onclick="donateForCampaign(this.id)"><span>Donate Now</span></a>
+                    <!-- <a href="donation.html" class="theme-btn btn-style-one donate-box-btn" name="donate_now" id="donate_now_details" onclick="donateForCampaign(this.id)"><span>Donate Now</span></a> -->
                 </div>
             </div>
         </div>
